--- a/ilosh_reservationEdit.htm
+++ b/ilosh_reservationEdit.htm
@@ -109,6 +109,9 @@
                                                 <label>預約位置</label>
                                             </div>
                                         </div>
+                                    </div>
+                                    <hr>
+                                    <div class="flex-form">
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="" name="" class="dynamicCol used">
