--- a/ilosh_resetPassword.htm
+++ b/ilosh_resetPassword.htm
@@ -34,19 +34,22 @@
                 </div>
                 <span>勞安所主題網網站管理平台</span>
             </h1>
+            <h2>重設密碼</h2>
+            <p class="help">每90天需進行密碼變更，請立即進行變更。</p><!--定期變更才出現這一句-->
+            <p class="help">變更的密碼不可與前三次使用的密碼相同，密碼長度需12字元以上，並包含大寫英文字母(A-Z)、小寫英文字母(a-z) 、阿拉伯數字(0-9)或特殊符號等至少 3 種組合。</p>
             <div class="flex-form">
                 <div class="form_grp">
-                    <div class="labelEffect">
-                        <input name="" type="text" value="">
-                        <label>請輸入帳號<abbr>*</abbr></label>
+                    <div class="labelEffect password_toggle">
+                        <input name="" type="password" value="">
+                        <button class="btn btn-icon"><i class="i_hide"></i></button>
+                        <label>請輸入新的密碼<abbr>*</abbr></label>
                     </div>
-                    <!-- <div class="help">請輸入帳號</div> -->
                 </div>
                 <div class="form_grp">
                     <div class="labelEffect password_toggle">
                         <input name="" type="password" value="">
                         <button class="btn btn-icon"><i class="i_hide"></i></button>
-                        <label>請輸入密碼<abbr>*</abbr></label>
+                        <label>請再次輸入密碼<abbr>*</abbr></label>
                     </div>
                 </div>
                 <div class="form_grp">
@@ -60,19 +63,11 @@
                     </div>
                     <div class="help">請輸入圖片上的驗證碼英數字</div>
                 </div>
-                <div class="form_grp">
-                    <div class="form_content">
-                        <div class="check_grp form_inline">
-                            <label><input name="" type="checkbox" value=""><span>記住我</span></label>
-                        </div>
-                        <a href="#">忘記密碼</a>
-                    </div>
-                </div>
                 <div class="btn_grp">
-                    <button class="btn btn-primary">登入</button>
+                    <button class="btn btn-primary">確定重設密碼</button>
                 </div>
                 <div class="contact">
-                    <p>如有登入問題，請聯繫系統管理員</p>
+                    <p>如無法重設，請聯繫系統管理員。</p>
                 </div>
             </div>
         </div>
