--- a/index_list.html
+++ b/index_list.html
@@ -115,6 +115,17 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>忘記/重設密碼</td>
+                        <td>
+                            <ul>
+                                <li>忘記密碼－重設：<a href="ilosh_fgPassword.htm" target="_blank"></a><br></li>
+                                <li>定期重設密碼：<a href="ilosh_fgPassword.htm" target="_blank"></a><br></li>
+                            </ul>
+                            <font style="color:red;">增加 link rel="stylesheet" href="css/customize.css"</font>  
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>登入首頁</td>
                         <td>
                             <ul>
