--- a/ilosh_fgPassword.htm
+++ b/ilosh_fgPassword.htm
@@ -34,6 +34,8 @@
                 </div>
                 <span>勞安所主題網網站管理平台</span>
             </h1>
+            <h2>重設密碼</h2>
+            <p class="help">請輸入您的帳號與email，需兩者完全與原帳號資料相符方可繼續重設密碼。</p>
             <div class="flex-form">
                 <div class="form_grp">
                     <div class="labelEffect">
@@ -43,10 +45,9 @@
                     <!-- <div class="help">請輸入帳號</div> -->
                 </div>
                 <div class="form_grp">
-                    <div class="labelEffect password_toggle">
-                        <input name="" type="password" value="">
-                        <button class="btn btn-icon"><i class="i_hide"></i></button>
-                        <label>請輸入密碼<abbr>*</abbr></label>
+                    <div class="labelEffect">
+                        <input name="" type="text" value="">
+                        <label>請輸入email<abbr>*</abbr></label>
                     </div>
                 </div>
                 <div class="form_grp">
@@ -60,19 +61,11 @@
                     </div>
                     <div class="help">請輸入圖片上的驗證碼英數字</div>
                 </div>
-                <div class="form_grp">
-                    <div class="form_content">
-                        <div class="check_grp form_inline">
-                            <label><input name="" type="checkbox" value=""><span>記住我</span></label>
-                        </div>
-                        <a href="#">忘記密碼</a>
-                    </div>
-                </div>
                 <div class="btn_grp">
-                    <button class="btn btn-primary">登入</button>
+                    <button class="btn btn-primary">重設密碼</button>
                 </div>
                 <div class="contact">
-                    <p>如有登入問題，請聯繫系統管理員</p>
+                    <p>如無法重設，請聯繫系統管理員。</p>
                 </div>
             </div>
         </div>
