--- a/aside_ilosh.htm
+++ b/aside_ilosh.htm
@@ -20,7 +20,7 @@
                 <span>系統開發</span>
             </a>
                 <ul>
-                    <li><a href="codeList.htm"><span>代碼維護</span></a></li>
+                    <li><a href="codeList.htm"><span>代碼管理</span></a></li>
                 </ul>
             </li>
 
@@ -29,11 +29,12 @@
                     <span>系統管理</span>
                 </a>
                 <ul>
-                    <li><a href="ugrpList.htm"><span>權限群組</span></a></li>
-                    <li><a href="userList.htm"><span>使用者管理</span></a></li>
+                    <li><a href="ugrpList.htm"><span>權限群組(角色權限)</span></a></li>
+                    <li><a href="userList.htm"><span>使用者(帳號)管理</span></a></li>
                     <li><a href="deptEdit.htm"><span>組織架構</span></a></li>
-                    <li><a href="userLogList.htm"><span>登入紀錄查詢</span></a></li>
-                    <li><a href="userUpdate.htm"><span>個人資料檢視</span></a></li>
+                    <li><a href="userLogList.htm"><span>使用者(登入)紀錄</span></a></li>
+                    <li><a href="#"><span>系統變更紀錄(暫)</span></a></li>
+                    <li><a href="userUpdate.htm"><span>個人資料管理(變更密碼)</span></a></li>
                 </ul>
             </li>
             <li><a href="#">
@@ -41,9 +42,9 @@
                     <span>網站管理</span>
                 </a>
                 <ul>
-                    <li><a href="catTreeList.htm"><span>目錄樹管理管理</span></a></li>
-                    <li><a href="card_website.htm"><span>網別管理</span></a></li>
-                    <li><a href="card_website.htm"><span>版型管理</span></a></li>
+                    <li><a href="ilosh_site_list.htm"><span>網站資訊/色系管理</span></a></li>
+                    <li><a href="catTreeList.htm"><span>架構(目錄樹)管理</span></a></li>
+                    <!--li><a href="card_website.htm"><span>版型管理</span></a></li-->
                 </ul>
             </li>
             <li class="li_hasChild">
@@ -52,10 +53,10 @@
                     <span>內容管理</span>
                 </a>
                 <ul>
-                    <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
-                    <li><a href="data_list.htm"><span>單元上稿</span></a></li>
-                    <li><a href="data_list.htm"><span>資料審稿</span></a></li>
-                    <li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li>
+                    <li><a href="data_list_noTree.htm"><span>快速(資料)上稿</span></a></li>
+                    <li><a href="data_list.htm"><span>單元上稿(UI示意)</span></a></li>
+                    <li><a href="review_list.htm"><span>資料審稿</span></a></li>
+                    <!--li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li-->
                 </ul>
             </li>
             <!--li>
@@ -129,22 +130,24 @@
                     <span>客製化管理</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>地點(場地)管理</span></a></li>
-                    <li><a href="#"><span>預約使用者管理</span></a></li>
-                    <li><a href="#"><span>預約名單管理</span></a></li>
-                    <li><a href="#"><span>報表管理</span></a></li>
-                    <li><a href="#"><span>標案管理</span></a></li>
-                    <li><a href="#"><span>報表管理</span></a></li>
-                    <li><a href="#"><span>批次上稿管理</span></a></li>
-                    <li><a href="#"><span>網頁瀏覽統計管理</span></a></li>
-                    <li><a href="#"><span>報表管理</span></a></li>
+                    <li><a href="ilosh_planapplyList.htm"><span>申請案件管理</span></a></li>
+                    <li><a href="ilosh_vdiList.htm"><span>虛擬主機管理</span></a></li>
+                    <li><a href="ilosh_memberList.htm"><span>會員帳號管理</span></a></li>
+                    <li><a href="ilosh_researchList.htm"><span>預約名單管理</span></a></li>
+                    <li><a href="ilosh_space_list.htm"><span>場地空間管理(地點/開放時間)</span></a></li>
+                    <li><a href="ilosh_vdiStat.htm"><span>VDI報表模組</span></a></li>
+                    <li><a href="ilosh_projectList.htm"><span>標案管理</span></a></li>
+                    <li><a href="ilosh_projectStat.htm"><span>採購報表模組</span></a></li>
+                    <li><a href="ilosh_researchList.htm"><span>研究成果(上稿)管理</span></a></li>
+                    <li><a href="ilosh_researchImportrecord.htm"><span>批次上稿與紀錄</span></a></li>
+                    <li><a href="ilosh_researchStat.htm"><span>研究成果瀏覽統計管理</span></a></li>
                 </ul>
             </li>
     </ul>
     </nav>
     <!-- 次層抽屜選單 -->
     <!-- copyright -->
-    <div class="copyright">Copyright 2021 © Hyweb </div>
+    <div class="copyright">Copyright 2022 © ILOSH </div>
 </aside>
 <!-- customize -->
 <script src="js/customize.js"></script>
