--- a/index_list.html
+++ b/index_list.html
@@ -106,11 +106,12 @@
                         <td>
                             <ul>
                                 <li>標準版：<a href="login.htm" target="_blank"></a></li>
-                                <li>TICC：<a href="login_ticc.htm" target="_blank"></a><br></li>
-                                <li>ILOSH：<a href="login_ilosh.htm" target="_blank"></a><br></li>
+                                <li>TICC：<a href="login_ticc.htm" target="_blank"></a></li>
+                                <li>ILOSH：<a href="login_ilosh.htm" target="_blank"></a></li>
                             </ul>
                             
                             <font style="color:red;">替換登入頁和Aside logo圖</font>
+                            <p><li>勞安所用左欄功能選單：<a href="aside_ilosh.htm" target="_blank"></a></li></p>
                         </td>
                     </tr>
                     <tr>
@@ -118,8 +119,8 @@
                         <td>忘記/重設密碼</td>
                         <td>
                             <ul>
-                                <li>忘記密碼－重設：<a href="ilosh_fgPassword.htm" target="_blank"></a><br></li>
-                                <li>定期重設密碼：<a href="ilosh_fgPassword.htm" target="_blank"></a><br></li>
+                                <li>忘記密碼－重設：<a href="ilosh_fgPassword.htm" target="_blank"></a></li>
+                                <li>定期重設密碼：<a href="ilosh_fgPassword.htm" target="_blank"></a></li>
                             </ul>
                             <font style="color:red;">增加 link rel="stylesheet" href="css/customize.css"</font>  
                         </td>
