--- a/aside_ilosh.htm
+++ b/aside_ilosh.htm
@@ -1,7 +1,7 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/ilosh_2.png" alt=""><span>勞動及職業安全衛生研究所<br>網站管理平台</span>
+            <img src="images/ilosh_2.png" alt=""><span>勞安所<br>網站管理平台</span>
         </a>
     </h1>
     <!-- menu -->
