--- a/header.htm
+++ b/header.htm
@@ -14,13 +14,13 @@
             <!--  個人化panel -->
             <div class="item account dropdown">
                 <a href="#" class="dropdown-btn">
-                    <img src="images/man.svg" alt="">
+                    <img src="images/user_icon.svg" alt="">
                 </a>
 
                 <div class="dropdown-content">
                     <div class="info">
                         <div class="pic">
-                            <img src="images/man.svg" alt="">
+                            <img src="images/user_icon.svg" alt="">
                         </div>
                         <div class="id">Admin (劉佳淇｜liucc@hyweb.com.tw)</div>
                         <div>2020-01-01 14:00:05 從10.10.1.1 登入</div>
@@ -29,7 +29,7 @@
                         <li>2020-01-01 14:00:05 從10.10.1.1 登入系統</li>
                     </ul-->
                     <div class="btn-grp">
-                        <button class="btn">個人資料</button>
+                        <button class="btn" onclick="window.location.href='userUpdate.htm';">個人資料管理</button>
                         <button class="btn btn-red">登出</button>
                     </div>
                 </div>
