--- a/ilosh_vdiEdit.htm
+++ b/ilosh_vdiEdit.htm
@@ -177,7 +177,7 @@
             </script>
             <script>
             $('header').load("header.htm");
-            $('aside').load("aside.htm");
+            $('aside').load("aside_ilosh.htm");
             </script>
 </body>
 
