--- a/ilosh_memberEdit.htm
+++ b/ilosh_memberEdit.htm
@@ -298,7 +298,7 @@
             </script>
             <script>
             $('header').load("header.htm");
-            $('aside').load("aside.htm");
+            $('aside').load("aside_ilosh.htm");
             </script>
 </body>
 
