--- a/ilosh_reservationEdit.htm
+++ b/ilosh_reservationEdit.htm
@@ -193,7 +193,7 @@
             </script>
             <script>
             $('header').load("header.htm");
-            $('aside').load("aside.htm");
+            $('aside').load("aside_ilosh.htm");
             </script>
 </body>
 
