--- a/ilosh_siteEdit.htm
+++ b/ilosh_siteEdit.htm
@@ -153,7 +153,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_ilosh.htm");
     </script>
 </body>
 
