--- a/index_list.html
+++ b/index_list.html
@@ -119,8 +119,8 @@
                         <td>忘記/重設密碼</td>
                         <td>
                             <ul>
-                                <li>忘記密碼－重設：<a href="ilosh_fgPassword.htm" target="_blank"></a></li>
-                                <li>定期重設密碼：<a href="ilosh_fgPassword.htm" target="_blank"></a></li>
+                                <li>忘記密碼申請重設：<a href="ilosh_fgPassword.htm" target="_blank"></a></li>
+                                <li>變更定期重設密碼：<a href="ilosh_resetPassword.htm" target="_blank"></a></li>
                             </ul>
                             <font style="color:red;">增加 link rel="stylesheet" href="css/customize.css"</font>  
                         </td>
@@ -336,7 +336,8 @@
                         <td>
                             <ul>
                                 <li><font style="color:red;">(調整版面)</font> 1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                <li><font style="color:red;">(調整)</font> 1-2.新增編修場地/座位/開放時間設定 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整)</font> 1-2.新增編修場地/座位/開放時間設定 <a href="ilosh_spaceedit.htm" target="_blank"></a><br>
+                                    彈出視窗(Lightbox)：座位設定 <a href="fancybox_seatedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
