--- a/ilosh_memberEdit.htm
+++ b/ilosh_memberEdit.htm
@@ -246,7 +246,7 @@
                                     </div>
                                     <div class="btn_grp">
                                         <button class="btn btn-orange">編修儲存</button>
-                                        <button class="btn">放棄編修</button>
+                                        <button class="btn btn-blue">重發驗證信</button>
                                     </div>
                                 </div>
                                 <div class="block">
