--- a/index_list.html
+++ b/index_list.html
@@ -308,6 +308,7 @@
             </table>
         </div>
 
+        <a name="ilosh" id="ilosh"></a>
         <div class="table_wrapper">
             <table>
               <caption>勞安所 客製化功能</caption>
