--- a/aside_ilosh.htm
+++ b/aside_ilosh.htm
@@ -130,17 +130,17 @@
                     <span>客製化管理</span>
                 </a>
                 <ul>
-                    <li><a href="ilosh_planapplyList.htm"><span>申請案件管理</span></a></li>
-                    <li><a href="ilosh_vdiList.htm"><span>虛擬主機管理</span></a></li>
-                    <li><a href="ilosh_memberList.htm"><span>會員帳號管理</span></a></li>
-                    <li><a href="ilosh_researchList.htm"><span>預約名單管理</span></a></li>
-                    <li><a href="ilosh_space_list.htm"><span>場地空間管理(地點/開放時間)</span></a></li>
-                    <li><a href="ilosh_vdiStat.htm"><span>VDI報表模組</span></a></li>
-                    <li><a href="ilosh_projectList.htm"><span>標案管理</span></a></li>
-                    <li><a href="ilosh_projectStat.htm"><span>採購報表模組</span></a></li>
-                    <li><a href="ilosh_researchList.htm"><span>研究成果(上稿)管理</span></a></li>
-                    <li><a href="ilosh_researchImportrecord.htm"><span>批次上稿與紀錄</span></a></li>
-                    <li><a href="ilosh_researchStat.htm"><span>研究成果瀏覽統計管理</span></a></li>
+                    <li><a href="ilosh_planapplyList.htm"><span>申請案件管理(VDI)</span></a></li>
+                    <li><a href="ilosh_vdiList.htm"><span>虛擬主機管理(VDI)</span></a></li>
+                    <li><a href="ilosh_memberList.htm"><span>會員帳號管理(VDI)</span></a></li>
+                    <li><a href="ilosh_space_list.htm"><span>場地空間管理(VDI)</span></a></li>
+                    <li><a href="ilosh_researchList.htm"><span>預約名單管理(VDI)</span></a></li>
+                    <li><a href="ilosh_vdiStat.htm"><span>案件預約報表(VDI)</span></a></li>
+                    <li><a href="ilosh_projectList.htm"><span>標案公告管理(採購)</span></a></li>
+                    <li><a href="ilosh_projectStat.htm"><span>招標統計報表(採購)</span></a></li>
+                    <li><a href="ilosh_researchList.htm"><span>研究成果上稿(成果)</span></a></li>
+                    <li><a href="ilosh_researchImportrecord.htm"><span>批次上稿與紀錄(成果)</span></a></li>
+                    <li><a href="ilosh_researchStat.htm"><span>研究成果瀏覽統計(成果)</span></a></li>
                 </ul>
             </li>
     </ul>
