--- a/index_list.html
+++ b/index_list.html
@@ -446,6 +446,35 @@
             </table>
         </div>
 
+        <a name="ilosh" id="tpml"></a>
+        <div class="table_wrapper">
+            <table>
+              <caption>北市圖 客製化功能</caption>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>好書推薦管理</td>
+                        <td>
+                            <ul>
+                                <li>好書推薦清單 <a href="tpmlkids_recommentBooksList.htm" target="_blank"></a></li>
+                                <li>新增(設定單元/選書) <a href="tpmlkids_recommentBooksAdd.htm" target="_blank"></a><br>
+                                    <a href="fancybox_booklist.htm" target="_blank"></a>
+                                </li>
+                                <li>編修(更新書目資訊) <a href="tpmlkids_recommentBooksEdit.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
 
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
