--- a/header.htm
+++ b/header.htm
@@ -1,5 +1,6 @@
 <header>
     <div class="container">
+        <a class="accesskey" href="#aU" id="aU" accesskey="U" title="上方功能區塊" tabindex="2">:::</a>
         <!-- toggle_menu_btn 收合按鈕 -->
         <a href="#" class="toggle_menu_btn"></a>
         <!-- 版頭右側功能 -->
