--- a/index_list.html
+++ b/index_list.html
@@ -460,7 +460,7 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>好書推薦管理</td>
+                        <td>(兒童網)好書推薦管理</td>
                         <td>
                             <ul>
                                 <li>好書推薦清單 <a href="tpmlkids_recommentBooksList.htm" target="_blank"></a></li>
@@ -468,6 +468,15 @@
                                     <a href="fancybox_booklist.htm" target="_blank"></a>
                                 </li>
                                 <li>編修(更新書目資訊) <a href="tpmlkids_recommentBooksEdit.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>(視障網)借閱證(會員)／留言版管理</td>
+                        <td>
+                            <ul>
+                                <li>會員清單 <a href="tpmlblind_memberlist.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
