--- a/index_list.html
+++ b/index_list.html
@@ -446,7 +446,7 @@
             </table>
         </div>
 
-        <a name="ilosh" id="tpml"></a>
+        <a name="tpml" id="tpml"></a>
         <div class="table_wrapper">
             <table>
               <caption>北市圖 客製化功能</caption>
