--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -4,7 +4,7 @@
             <img src="images/W_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
         </a>
     </h1>
-    <a href="#" title="左方導覽區塊" accesskey="L">:::<img src="images/point.gif" alt="左方功能區塊"></a>
+    <a href="#" title="左方導覽區塊" accesskey="L">:::</a>
     <!-- menu -->
     <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
