--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -4,7 +4,7 @@
             <img src="images/W_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
         </a>
     </h1>
-    <a href="#" title="左方導覽區塊" accesskey="L">:::</a>
+    <a href="#AL" title="左方導覽區塊" accesskey="L" class="accesskey">:::</a>
     <!-- menu -->
     <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
@@ -44,7 +44,7 @@
                 <ul>
                     <li><a href="catTreeList.htm"><span>目錄樹管理管理</span></a></li>
                     <li><a href="card_website.htm"><span>網別管理</span></a></li>
-                    <li><a href="card_website.htm"><span>版型管理</span></a></li>
+                    <!--li><a href="card_website.htm"><span>版型管理</span></a></li-->
                 </ul>
             </li>
             <li class="li_hasChild">
@@ -56,7 +56,7 @@
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
                     <li><a href="data_list.htm"><span>資料審稿</span></a></li>
-                    <li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li>
+                    <!--li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li-->
                 </ul>
             </li>
             <!--li>
@@ -127,11 +127,11 @@
             </li-->
             <li><a href="#">
                     <img src="images/iot_icon/todo.svg" alt="">
-                    <span>備用選單</span>
+                    <span>客製化功能</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>第二層選單</span></a></li>
-                    <li><a href="#"><span>第二層選單</span></a></li>
+                    <li><a href="tpmlblind_memberlist.htm"><span>會員管理</span></a></li>
+                    <li><a href="#"><span>留言版管理</span></a></li>
                 </ul>
             </li>
         </ul>
