--- a/index_list.html
+++ b/index_list.html
@@ -477,6 +477,7 @@
                         <td>
                             <ul>
                                 <li>會員清單 <a href="tpmlblind_memberlist.htm" target="_blank"></a></li>
+                                <li>會員編輯 <a href="tpmlblind_memberEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
