--- a/tpmlblind_memberEdit.htm
+++ b/tpmlblind_memberEdit.htm
@@ -276,7 +276,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
