--- a/tpmlblind_memberEdit.htm
+++ b/tpmlblind_memberEdit.htm
@@ -248,6 +248,7 @@
                                                 </select>
                                                 <label>審核狀態</label>
                                             </div>
+                                            <div class="help">審核通過後，會員資訊將推送到自動化系統註冊閱讀證會員。後續編修會員資訊或密碼，請至自動化系統編修。</div>
                                         </div>
                                         <div class="btn_grp">
 											<button class="btn btn-orange">編修儲存</button>
