--- a/tpmlblind_memberEdit.htm
+++ b/tpmlblind_memberEdit.htm
@@ -241,6 +241,13 @@
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
+                                                <textarea></textarea>
+                                                <label>審核原因說明</label>
+                                            </div>
+                                            <div class="help">若需輸入審核原因請於此輸入</div>
+                                        </div>
+                                        <div class="form_grp">
+                                            <div class="labelEffect">
                                                 <select id="" name="" class="dynamicCol used">
                                                     <option value="" selected="" disabled="disabled">待審核</option>
                                                     <option value="1">審核通過</option>
