--- a/index_list.html
+++ b/index_list.html
@@ -478,6 +478,8 @@
                             <ul>
                                 <li>會員清單 <a href="tpmlblind_memberlist.htm" target="_blank"></a></li>
                                 <li>會員編輯 <a href="tpmlblind_memberEdit.htm" target="_blank"></a></li>
+                                <li>留言清單 <a href="tpmlblind_messagelist.htm" target="_blank"></a></li>
+                                <li>留言編輯 <a href="tpmlblind_messageEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
