--- a/tpmlblind_messagelist.htm
+++ b/tpmlblind_messagelist.htm
@@ -118,6 +118,9 @@
                                                 <input type="button" value="條件切換" title="條件切換" class="btn btn-submit">
                                         </form>
                                     </div>
+                                    <div class="quick_btn">
+                                        
+                                    </div>
                                 </div>
                                 <div class="_content">
                                     <!-- 表格樣式 -->
